--- a/bonus/hover-styles.html
+++ b/bonus/hover-styles.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Contact | Your Name</title>
+	<title>Hover Styling</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -10,11 +10,11 @@
 
 	<header id="masthead">
 		<div class="container">
-			<a href="index.html" id="logo">Your Name</a>
+			<a href="#" id="logo">Your Name</a>
 			<nav>
-				<a href="index.html">About</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="contact.html">Contact</a>
+				<a href="#">About</a>
+				<a href="#">Portfolio</a>
+				<a href="#">Contact</a>
 			</nav>
 		</div>
 	</header>
